--- a/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
+++ b/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
@@ -13,7 +13,7 @@
       <AnchorPane prefHeight="572.0" prefWidth="250.0">
          <children>
             <TextField fx:id="peso_producto_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
-            <Button layoutX="136.0" layoutY="153.0" mnemonicParsing="false" onAction="#buscar_tipo_producto" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+            <Button layoutX="136.0" layoutY="153.0" mnemonicParsing="false" onAction="#buscarAlmacen" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
             <TableView fx:id="tablaProductos" layoutX="13.0" layoutY="205.0" prefHeight="350.0" prefWidth="224.0">
                <columns>
@@ -74,14 +74,14 @@
                      <content>
                         <AnchorPane>
                            <children>
-                              <TitledPane animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="24.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Racks:">
+                              <TitledPane fx:id="create_racks_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="24.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Racks:">
                                  <content>
                                     <AnchorPane>
                                        <children>
                                           <Label layoutX="14.0" layoutY="19.0" text="Altura:" />
-                                          <TextField layoutX="88.0" layoutY="14.0" prefHeight="27.0" prefWidth="179.0" />
-                                          <Button layoutX="168.0" layoutY="61.0" mnemonicParsing="false" text="Guardar" />
-                                          <Button layoutX="65.0" layoutY="61.0" mnemonicParsing="false" text="Cancelar" />
+                                          <TextField fx:id="rack_altura_field" layoutX="88.0" layoutY="14.0" prefHeight="27.0" prefWidth="179.0" />
+                                          <Button layoutX="168.0" layoutY="61.0" mnemonicParsing="false" onAction="#crearRack" text="Guardar" />
+                                          <Button layoutX="65.0" layoutY="61.0" mnemonicParsing="false" onAction="#cancelarCreacionRack" text="Cancelar" />
                                        </children>
                                     </AnchorPane>
                                  </content>
