--- a/src/main/java/fxml/Materiales/OrdenesDeEntrada/OrdenesDeEntrada.fxml
+++ b/src/main/java/fxml/Materiales/OrdenesDeEntrada/OrdenesDeEntrada.fxml
@@ -225,7 +225,7 @@
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="65.0" text="Cantidad" GridPane.rowIndex="1" />
                               <Label alignment="CENTER" prefHeight="17.0" prefWidth="65.0" text="Producto" GridPane.columnIndex="2" GridPane.rowIndex="1" />
                               <TextField fx:id="VerProducto" prefHeight="25.0" prefWidth="350.0" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-                              <Button mnemonicParsing="false" onAction="#agregarProducto" prefHeight="25.0" prefWidth="34.0" text="+" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
+                              <Button mnemonicParsing="false" onAction="#buscarProducto" prefHeight="25.0" prefWidth="34.0" text="+" GridPane.columnIndex="4" GridPane.halignment="CENTER" GridPane.rowIndex="1" />
                               <Spinner fx:id="verCantidad" prefHeight="25.0" prefWidth="61.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
@@ -243,8 +243,10 @@
                                 <content>
                                   <AnchorPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="0.0" minWidth="0.0" prefHeight="0.0" prefWidth="0.0">
                                        <children>
-                                          <Button layoutX="37.0" layoutY="51.0" mnemonicParsing="false" onAction="#eliminarProducto" prefHeight="48.0" prefWidth="53.0" text="E" />
-                                          <Label alignment="CENTER" layoutX="15.0" layoutY="107.0" prefHeight="35.0" prefWidth="98.0" text="Eliminar Producto" />
+                                          <Button layoutX="42.0" layoutY="125.0" mnemonicParsing="false" onAction="#eliminarProducto" prefHeight="40.0" prefWidth="44.0" text="E" />
+                                          <Label alignment="CENTER" layoutX="15.0" layoutY="165.0" prefHeight="35.0" prefWidth="98.0" text="Eliminar Producto" />
+                                          <Label alignment="CENTER" layoutX="15.0" layoutY="72.0" prefHeight="35.0" prefWidth="98.0" text="Agregar Producto" />
+                                          <Button layoutX="42.0" layoutY="32.0" mnemonicParsing="false" onAction="#agregarProducto" prefHeight="40.0" prefWidth="44.0" text="A" />
                                        </children></AnchorPane>
                                 </content>
                               </TitledPane>
