--- a/src/main/java/fxml/General/Kardex/Kardex.fxml
+++ b/src/main/java/fxml/General/Kardex/Kardex.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Ventas.KardexController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.General.Kardex.KardexController">
    <children>
       <AnchorPane prefHeight="575.0" prefWidth="250.0">
          <children>
@@ -33,21 +33,21 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="categoriaBuscar" layoutX="145.0" layoutY="23.0" prefHeight="25.0" prefWidth="87.0" />
+                  <TextField fx:id="codigoProductoBuscar" layoutX="145.0" layoutY="23.0" prefHeight="25.0" prefWidth="87.0" />
                   <TextField fx:id="tipoProductoBuscar" layoutX="145.0" layoutY="56.0" prefHeight="25.0" prefWidth="87.0" />
                   <Label layoutX="14.0" layoutY="58.0" prefHeight="21.0" prefWidth="114.0" text="Producto">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Button fx:id="mostrar_kardex" layoutX="140.0" layoutY="483.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
+                  <Button fx:id="mostrar_kardex" layoutX="140.0" layoutY="483.0" mnemonicParsing="false" onAction="#mostrar_detalle_tipo_producto" prefHeight="25.0" prefWidth="96.0" text="Visualizar" />
                   <TableView fx:id="tablaProductos" layoutX="14.0" layoutY="140.0" prefHeight="328.0" prefWidth="224.0">
                      <columns>
-                        <TableColumn fx:id="ColumnaTipoProducto" prefWidth="113.0" text="Producto" />
-                        <TableColumn fx:id="ColumnaCodigoProducto" prefWidth="110.0" text="Código" />
+                        <TableColumn fx:id="ColumnaTipoProducto" prefWidth="113.0" text="Código" />
+                        <TableColumn fx:id="ColumnaCodigoProducto" prefWidth="110.0" text="Producto" />
                      </columns>
                   </TableView>
-                  <Button layoutX="141.0" layoutY="98.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
+                  <Button layoutX="141.0" layoutY="98.0" mnemonicParsing="false" onAction="#buscar_producto" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
                </children>
             </AnchorPane>
          </children>
@@ -94,7 +94,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField layoutX="159.0" layoutY="71.0" prefHeight="30.0" prefWidth="567.0">
+            <TextField fx:id="producto_nombre" layoutX="159.0" layoutY="71.0" prefHeight="30.0" prefWidth="567.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -104,7 +104,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField layoutX="160.0" layoutY="109.0">
+            <TextField fx:id="producto_codigo" layoutX="160.0" layoutY="109.0">
                <font>
                   <Font size="14.0" />
                </font>
@@ -114,7 +114,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <TextField layoutX="551.0" layoutY="108.0">
+            <TextField fx:id="producto_categoria" layoutX="551.0" layoutY="108.0">
                <font>
                   <Font size="14.0" />
                </font>
