--- a/src/main/java/fxml/ContenidoPrincipal.fxml
+++ b/src/main/java/fxml/ContenidoPrincipal.fxml
@@ -37,15 +37,15 @@
                   </Menu>
               </menus>
             </MenuBar>
-            <HBox prefHeight="100.0" prefWidth="1200.0">
+            <HBox prefHeight="79.0" prefWidth="1200.0">
                <children>
                   <AnchorPane fx:id="contenedor_botones_acciones" prefHeight="100.0" />
-                  <AnchorPane prefHeight="200.0" prefWidth="900.0">
+                  <AnchorPane prefHeight="81.0" prefWidth="900.0">
                      <children>
                         <Separator layoutX="1.0" layoutY="9.0" orientation="VERTICAL" prefHeight="80.0" />
-                        <Button layoutX="29.0" layoutY="10.0" mnemonicParsing="false">
+                        <Button layoutX="62.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
                            <graphic>
-                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                              <VBox alignment="CENTER" prefHeight="59.0" prefWidth="0.0">
                                  <children>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
                                        <image>
@@ -60,9 +60,9 @@
                               </VBox>
                            </graphic>
                         </Button>
-                        <Button layoutX="133.0" layoutY="9.0" mnemonicParsing="false">
+                        <Button layoutX="147.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
                            <graphic>
-                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
                                  <children>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
                                        <image>
@@ -77,9 +77,9 @@
                               </VBox>
                            </graphic>
                         </Button>
-                        <Button layoutX="238.0" layoutY="9.0" mnemonicParsing="false">
+                        <Button layoutX="231.0" layoutY="11.0" mnemonicParsing="false" prefHeight="61.0" prefWidth="76.0">
                            <graphic>
-                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
                                  <children>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
                                        <image>
@@ -94,9 +94,9 @@
                               </VBox>
                            </graphic>
                         </Button>
-                        <Button layoutX="344.0" layoutY="9.0" mnemonicParsing="false">
+                        <Button layoutX="319.0" layoutY="11.0" mnemonicParsing="false" prefHeight="67.0" prefWidth="76.0">
                            <graphic>
-                              <VBox alignment="CENTER" prefHeight="70.0" prefWidth="70.0">
+                              <VBox alignment="CENTER" prefHeight="50.0" prefWidth="70.0">
                                  <children>
                                     <ImageView fitHeight="40.0" fitWidth="40.0" styleClass="botonImagenImg">
                                        <image>
