--- a/src/main/java/fxml/Ventas/Proformas/Proformas.fxml
+++ b/src/main/java/fxml/Ventas/Proformas/Proformas.fxml
@@ -59,7 +59,7 @@
                      <columns>
                         <TableColumn fx:id="proformaColumn" prefWidth="65.0" text="Codigo" />
                         <TableColumn fx:id="clienteColumn" prefWidth="182.0" text="Cliente" />
-                        <TableColumn prefWidth="75.0" text="Estado" />
+                        <TableColumn fx:id="ColumnaEstado" prefWidth="75.0" text="Estado" />
                      </columns>
                      <columnResizePolicy>
                         <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
@@ -88,7 +88,7 @@
             </AnchorPane>
             <AnchorPane fx:id="proforma_formulario" layoutX="45.0" layoutY="83.0" prefHeight="120.0" prefWidth="750.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="50.0">
                <children>
-                  <DatePicker fx:id="fechaProfSh" layoutX="70.0" layoutY="94.0" />
+                  <DatePicker fx:id="fechaProfSh" layoutX="88.0" layoutY="96.0" />
                   <TextField fx:id="clienteSh" layoutX="88.0" layoutY="16.0" prefHeight="25.0" prefWidth="248.0" />
                   <Label layoutX="12.0" layoutY="94.0" text="Fecha:">
                      <font>
@@ -100,7 +100,7 @@
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <Label layoutX="277.0" layoutY="98.0" text="Tipo de Moneda:">
+                  <Label layoutX="315.0" layoutY="97.0" text="Tipo de Moneda:">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -117,7 +117,7 @@
                      </font>
                   </Label>
                   <TextField fx:id="direccionSh" editable="false" layoutX="88.0" layoutY="55.0" prefHeight="25.0" prefWidth="248.0" />
-                  <ComboBox fx:id="VerMoneda" layoutX="420.0" layoutY="96.0" prefWidth="150.0" />
+                  <ComboBox fx:id="VerMoneda" layoutX="443.0" layoutY="96.0" prefWidth="150.0" />
                   <Label fx:id="dniLabel" layoutX="355.0" layoutY="59.0" text="DNI:" />
                   <TextField fx:id="VerDocCliente" editable="false" layoutX="442.0" layoutY="55.0" prefHeight="25.0" prefWidth="151.0" />
                </children>
