--- a/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
@@ -72,12 +72,7 @@
                <children>
                   <Line endX="600.0" layoutX="133.0" layoutY="49.0" startX="-100.0" />
                   <ImageView fitHeight="40.0" fitWidth="40.0" layoutX="51.0" layoutY="5.0" pickOnBounds="true" preserveRatio="true" />
-                  <Label layoutX="133.0" layoutY="10.0" text="Promoción:">
-                     <font>
-                        <Font size="20.0" />
-                     </font>
-                  </Label>
-                  <Label fx:id="labelNombrePromocion" layoutX="260.0" layoutY="10.0" text="idPromo">
+                  <Label layoutX="51.0" layoutY="10.0" text="Detalles Promoción:">
                      <font>
                         <Font size="20.0" />
                      </font>
@@ -178,25 +173,18 @@
                      </font>
                   </Button>
                   <Line endX="600.0" layoutX="124.0" layoutY="305.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Label layoutX="480.0" layoutY="323.0" text="P.U. con promoción:">
+                  <Label layoutX="14.0" layoutY="336.0" text="Descripción:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtFiePrecioUnitario" layoutX="620.0" layoutY="319.0" prefHeight="25.0" prefWidth="104.0" />
-                  <Line endX="600.0" layoutX="124.0" layoutY="357.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Label layoutX="14.0" layoutY="380.0" text="Descripción:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="desc_concepto" layoutX="100.0" layoutY="380.0" prefHeight="25.0" prefWidth="620.0" />
+                  <TextField fx:id="desc_concepto" layoutX="100.0" layoutY="329.0" prefHeight="76.0" prefWidth="620.0" />
                   <Label layoutX="14.0" layoutY="427.0" text="Anotaciones:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextArea layoutX="100.0" layoutY="427.0" prefHeight="53.0" prefWidth="620.0" />
+                  <TextArea layoutX="100.0" layoutY="427.0" prefHeight="76.0" prefWidth="620.0" />
                </children>
             </AnchorPane>
          </children>
