--- a/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -177,26 +176,13 @@
                         <Font size="10.0" />
                      </font>
                   </Button>
-                  <Line endX="600.0" layoutX="124.0" layoutY="305.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Label layoutX="480.0" layoutY="323.0" text="P.U. con promoción:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextField fx:id="txtFiePrecioUnitario" layoutX="620.0" layoutY="319.0" prefHeight="25.0" prefWidth="104.0" />
                   <Line endX="600.0" layoutX="124.0" layoutY="357.0" startX="-100.0" stroke="#bcaaaa" />
-                  <Label layoutX="14.0" layoutY="380.0" text="Descripción:">
+                  <Label layoutX="14.0" layoutY="310.0" text="Concepto:">
                      <font>
                         <Font size="14.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="desc_concepto" layoutX="100.0" layoutY="380.0" prefHeight="25.0" prefWidth="620.0" />
-                  <Label layoutX="14.0" layoutY="427.0" text="Anotaciones:">
-                     <font>
-                        <Font size="14.0" />
-                     </font>
-                  </Label>
-                  <TextArea layoutX="100.0" layoutY="427.0" prefHeight="53.0" prefWidth="620.0" />
+                  <TextField fx:id="desc_concepto" layoutX="100.0" layoutY="310.0" prefHeight="25.0" prefWidth="620.0" />
                </children>
             </AnchorPane>
          </children>
