--- a/src/main/java/fxml/Materiales/Categorias/Categorias.fxml
+++ b/src/main/java/fxml/Materiales/Categorias/Categorias.fxml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Line?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.CategoriasController">
+<AnchorPane id="AnchorPane" prefHeight="572.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.Materiales.CategoriasController">
    <children>
       <AnchorPane prefHeight="575.0" prefWidth="1000.0">
          <children>
@@ -67,39 +70,35 @@
                   </Pane>
                   <Pane layoutY="85.0" prefHeight="491.0" prefWidth="750.0">
                      <children>
-                        <Pane prefHeight="233.0" prefWidth="700.0" style="-fx-border-color: black;">
-                           <children>
-                              <Label layoutX="14.0" layoutY="14.0" text="Información  General">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Label>
-                              <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                              <Label layoutX="21.0" layoutY="68.0" text="Nombre">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                              <TextField fx:id="nombre_categoria" layoutX="144.0" layoutY="66.0" prefHeight="25.0" prefWidth="445.0" />
-                              <TextField fx:id="codigo_categoria" layoutX="144.0" layoutY="134.0" prefHeight="25.0" prefWidth="445.0" />
-                              <Label layoutX="21.0" layoutY="136.0" text="Código">
-                                 <font>
-                                    <Font size="14.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                        </Pane>
-                        <Pane layoutY="260.0" prefHeight="202.0" prefWidth="700.0" style="-fx-border-color: black;">
-                           <children>
-                              <Label layoutX="14.0" layoutY="14.0" text="Descripción">
-                                 <font>
-                                    <Font size="20.0" />
-                                 </font>
-                              </Label>
-                              <Line endX="100.0" layoutX="115.0" layoutY="44.0" startX="-100.0" />
-                              <TextField fx:id="descripcion_categoria" layoutX="14.0" layoutY="61.0" prefHeight="118.0" prefWidth="668.0" />
-                           </children>
-                        </Pane>
+                        <TitledPane animated="false" collapsible="false" prefHeight="215.0" prefWidth="701.0" text="Información General">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <Label layoutX="24.0" layoutY="34.0" text="Nombre">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                    <TextField fx:id="nombre_categoria" layoutX="147.0" layoutY="32.0" prefHeight="25.0" prefWidth="500.0" />
+                                    <TextField fx:id="codigo_categoria" layoutX="147.0" layoutY="100.0" prefHeight="25.0" prefWidth="499.0" />
+                                    <Label layoutX="24.0" layoutY="102.0" text="Código">
+                                       <font>
+                                          <Font size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </TitledPane>
+                        <TitledPane animated="false" collapsible="false" layoutY="226.0" prefHeight="206.0" prefWidth="701.0" text="Descripción">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                 <children>
+                                    <TextField fx:id="descripcion_categoria" layoutX="12.0" layoutY="31.0" prefHeight="118.0" prefWidth="634.0" />
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </TitledPane>
                      </children>
                   </Pane>
                </children>
