--- a/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
+++ b/src/main/java/fxml/Ventas/Promociones/Promociones.fxml
@@ -76,7 +76,7 @@
                         <Font size="20.0" />
                      </font>
                   </Label>
-                  <Label fx:id="labelNombrePromocion" layoutX="260.0" layoutY="10.0" text="idPromo">
+                  <Label fx:id="labelNombrePromocion" layoutX="260.0" layoutY="10.0">
                      <font>
                         <Font size="20.0" />
                      </font>
