--- a/src/main/java/fxml/Ventas/Pedidos/Pedidos.fxml
+++ b/src/main/java/fxml/Ventas/Pedidos/Pedidos.fxml
@@ -108,7 +108,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="VerProducto" layoutX="280.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
-                        <Button fx:id="buscarProducto" layoutX="529.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
+                        <Button layoutX="529.0" layoutY="6.0" mnemonicParsing="false" onAction="#buscarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
                            <font>
                               <Font size="10.0" />
                            </font>
