--- a/src/main/java/fxml/General/ParametrosDeSistema/ParametrosDeSistemaBotones.fxml
+++ b/src/main/java/fxml/General/ParametrosDeSistema/ParametrosDeSistemaBotones.fxml
@@ -1,13 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="113.0" prefWidth="365.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
-      <Button layoutX="157.0" layoutY="44.0" mnemonicParsing="false" text="Guardar" />
+      <Button contentDisplay="TOP" layoutX="116.0" layoutY="10.0" mnemonicParsing="false" onAction="#onAccion" prefHeight="80.0" prefWidth="88.0" text="Guardar">
+         <graphic>
+            <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../Imagenes/save_icon.png" />
+               </image>
+            </ImageView>
+         </graphic></Button>
    </children>
 </AnchorPane>
